--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="content">
       <h1>Hola, soy Cristian</h1>
       <p>Desarrollador web en formación, enfocado en crear experiencias digitales modernas y fluidas. Explorando nuevas tecnologías y buscando oportunidades para crecer profesionalmente.</p>
-      <a href="mailto:tuemail@example.com" class="cta">Contactame</a>
+      <a href="cristianquito.edu@gmail.com" class="cta">Contactame</a>
     </div>
   </div>
 </body>
