--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <div class="overlay">
     <div class="content">
       <h1>Hola, soy Cristian</h1>
-      <p>Desarrollador web en formación, enfocado en crear experiencias digitales modernas y fluidas. Explorando nuevas tecnologías y buscando oportunidades para crecer profesionalmente.</p>
+      <p>Desarrollador web frontend con conocimientos en HTML, CSS y JavaScript. Actualmente finalizando React y comenzando mi camino en el backend. Ofrezco servicios básicos como creación de landing pages modernas, diseño responsive, integración de APIs y optimización visual. Siempre enfocado en buenas prácticas, código limpio y experiencia de usuario.</p>
       <a href="cristianquito.edu@gmail.com" class="cta">Contactame</a>
     </div>
   </div>
