--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cristian | Desarrollador Web</title>
   <link rel="stylesheet" href="style.css">
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
-</head>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Raleway:wght@700&display=swap" rel="stylesheet"></head>
 <body>
   <video autoplay muted loop class="video-bg">
     <source src="assets/video.mp4" type="video/mp4">
@@ -17,7 +16,7 @@
     <div class="content">
       <h1>Hola, soy Cristian</h1>
       <p>Desarrollador web frontend con conocimientos en HTML, CSS y JavaScript. Actualmente finalizando React y comenzando mi camino en el backend. Ofrezco servicios básicos como creación de landing pages modernas, diseño responsive, integración de APIs y optimización visual. Siempre enfocado en buenas prácticas, código limpio y experiencia de usuario.</p>
-      <a href="cristianquito.edu@gmail.com" class="cta">Contactame</a>
+      <a href="mailto:cristianquito.edu@gmail.com?subject=Solicitud%20de%20landing%20personalizado&body=Hola%20Cristian,%0AEstoy%20interesado%20en%20contratar%20una%20landing%20page%20como%20las%20que%20desarrollás.%0A%0AFavor%20de%20contarme%20los%20próximos%20pasos.%0AGracias!" class="cta">Solicita tu landing</a>
     </div>
   </div>
 </body>
