--- a/index.html
+++ b/index.html
@@ -4,25 +4,26 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Cristian | Desarrollador Web</title>
+  <meta name="description" content="Landing page profesional de Cristian, desarrollador web frontend con conocimientos en HTML, CSS, JavaScript y React." />
   <link rel="stylesheet" href="style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Raleway:wght@700&display=swap" rel="stylesheet" />
 </head>
 <body>
-  <video autoplay muted loop class="video-bg">
+  <video autoplay muted loop preload="auto" class="video-bg">
     <source src="assets/video.mp4" type="video/mp4" />
     Tu navegador no soporta el video de fondo.
   </video>
 
   <div class="overlay">
-    <div class="content">
+    <main class="content" role="main" aria-label="Presentación de Cristian, desarrollador web">
       <h1>Hola, soy Cristian</h1>
       <p>
-        Desarrollador web frontend con conocimientos en HTML, CSS y JavaScript. Actualmente finalizando React y comenzando mi camino en el backend. Ofrezco servicios básicos como creación de landing pages modernas, diseño responsive, integración de APIs y optimización visual. Siempre enfocado en buenas prácticas, código limpio y experiencia de usuario.
+        Desarrollador web frontend con experiencia en HTML, CSS, JavaScript y conocimientos en React. Actualmente comenzando mi camino en el backend. Ofrezco servicios básicos como creación de landing pages modernas, diseño responsive, integración de APIs y optimización visual. Me enfoco en buenas prácticas, código limpio y experiencia de usuario real.
       </p>
-      <a href="mailto:cristianquito.edu@gmail.com?subject=Solicitud%20de%20landing%20personalizado&body=Hola%20Cristian,%0AEstoy%20interesado%20en%20contratar%20una%20landing%20page%20como%20las%20que%20desarrollás.%0AFavor%20de%20contarme%20los%20próximos%20pasos.%0AGracias!" class="cta">
+      <a href="mailto:cristianquito.edu@gmail.com?subject=Solicitud%20de%20landing%20personalizado&body=Hola%20Cristian,%0AEstoy%20interesado%20en%20contratar%20una%20landing%20page%20como%20las%20que%20desarrollás.%0AFavor%20de%20contarme%20los%20próximos%20pasos.%0AGracias!" class="cta" aria-label="Enviar correo a Cristian para solicitar una landing page">
         Solicita tu landing
       </a>
-    </div>
+    </main>
   </div>
 </body>
 </html>
