--- a/index.html
+++ b/index.html
@@ -9,11 +9,10 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Raleway:wght@700&display=swap" rel="stylesheet" />
 </head>
 <body>
-<video autoplay muted loop controls class="video-bg">
-  <source src="assets/video.mp4" type="video/mp4" />
-  Tu navegador no soporta el video de fondo.
-</video>
-
+  <video autoplay muted loop class="video-bg"> 
+    <source src="assets/video.mp4" type="video/mp4" />
+    Tu navegador no soporta el video de fondo.
+  </video>
 
   <div class="overlay">
     <main class="content" role="main" aria-label="Presentación de Cristian, desarrollador web">
