--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <video autoplay muted loop class="video-bg"> 
-    <source src="./assets/background.mp4" type="video/mp4" />
+    <source src="assets/video.mp4" type="video/mp4" />
     Tu navegador no soporta el video de fondo.
   </video>
 
