--- a/index.html
+++ b/index.html
@@ -16,10 +16,15 @@
 
   <div class="overlay">
     <main class="content" role="main" aria-label="Presentación de Cristian, desarrollador web">
-      <h1>Hola, soy Cristian</h1>
-      <p>
-        Desarrollador web frontend con experiencia en HTML, CSS, JavaScript y conocimientos en React. Actualmente comenzando mi camino en el backend. Ofrezco servicios como creación de landing pages modernas, diseño responsive, integración de APIs y optimización visual. Me enfoco en buenas prácticas, código limpio y experiencia de usuario real.
-      </p>
+<h1>Hola, me llamo Cristian</h1>
+<p>
+  Desarrollador web frontend especializado en <strong>HTML</strong>, <strong>CSS</strong> y <strong>JavaScript</strong>, con conocimientos en <strong>React</strong> y enfoque en buenas prácticas, código limpio y experiencia de usuario. Actualmente ampliando mi formación en <strong>backend</strong>.
+</p>
+<p>
+  Ofrezco servicios como <em>landing pages modernas</em>, <em>diseño responsive</em>, <em>integración de APIs</em> y <em>optimización visual</em>.
+</p>
+<p class="stack">HTML | CSS | JavaScript | React</p>
+
       <a href="mailto:cristianquito.edu@gmail.com?subject=Solicitud%20de%20landing%20personalizado&body=Hola%20Cristian,%0AEstoy%20interesado%20en%20contratar%20una%20landing%20page%20como%20las%20que%20desarrollás.%0AFavor%20de%20contarme%20los%20próximos%20pasos.%0AGracias!" class="cta" aria-label="Enviar correo a Cristian para solicitar una landing page">
         Solicita tu landing
       </a>
