--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <meta name="description" content="Landing page profesional de Cristian, desarrollador web frontend con conocimientos en HTML, CSS, JavaScript y React." />
   <link rel="stylesheet" href="style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Raleway:wght@700&display=swap" rel="stylesheet" />
+  <link rel="icon" href="assets/icon.ico" type="image/x-icon" />
+  <link rel="apple-touch-icon" href="assets/favicon.png" />
 </head>
 <body>
   <video autoplay muted loop class="video-bg"> 
